--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,10 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+header {
+  width: 100vw;
+  height: 100px;
+}
 
 body {
   color: rgb(var(--foreground-rgb));
